--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oIq3afw5&__jvst=Employee&__jvsd=s8C2Kgwh&__jvsc=Twitter&bid=ngJDmMwf'>Benefitfocus Careers - Product Manager, HR Outsourcing Services</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qn79Vfwi&k=Job&j=o8KJafwv&__jvst=Employee&__jvsd=sq7Ckiwg&__jvsc=Twitter&bid=nI7EmMw6'>Product Manager | Trustwave Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/forgerock/jobs/4491035002'>Job Application for Senior Product Manager at ForgeRock</a></h5> 
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -66,7 +74,7 @@
 <p><span class="badge badge-light">Halifax, NS</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=okHz9fwt&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=n7EumMwS'>Farfetch Careers - Product Designer - Consumer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=okHz9fwt&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=n7EumMwS'>Farfetch Careers - Product Designer - Consumer</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -120,7 +128,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -242,7 +250,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-manager-m-f-d-for-nx-mechatronics-concept-designer-mcd-sisw/'>Product Manager (m/f/d) for NX Mechatronics Concept designer (MCD) - SISW | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/product-manager-m-f-d-for-nx-mechatronics-concept-designer-mcd-sisw/'>Product Manager (m/f/d) for NX Mechatronics Concept designer (MCD) - SISW | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -252,7 +260,7 @@
 <p><span class="badge badge-light">Canberra</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698255385-product-manager-biosimilars-m-f-'>Biogen Product Manager, Biosimilars (m/f) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698255385-product-manager-biosimilars-m-f-'>Biogen Product Manager, Biosimilars (m/f) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -292,7 +300,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://imaginelearning.applytojob.com/apply/7r7k4eRKCJ/Senior-Product-Manager'>Senior Product Manager - Imagine Learning - Career Page</a></h5> 
+<h5><a href='http://imaginelearning.applytojob.com/apply/7r7k4eRKCJ/Senior-Product-Manager'>Senior Product Manager - Imagine Learning - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -320,7 +328,7 @@
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nike.referrals.selectminds.com/jobs/technical-product-manager-53119'>Technical Product Manager - NIKE, Inc. Careers</a></h5> 
+<h5><a href='https://nike.referrals.selectminds.com/jobs/technical-product-manager-53119'>Technical Product Manager - NIKE, Inc. Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -340,7 +348,7 @@
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rewardsnetwork/fa8fa41e-1267-462d-a6a1-a09340c95dc6'>Rewards Network - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rewardsnetwork/fa8fa41e-1267-462d-a6a1-a09340c95dc6'>Rewards Network - Product Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -370,7 +378,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/pagerduty/0834b144-ba2f-4590-a81a-28e439c1c6a7'>PagerDuty - Product Manager Intern - Winter 2020</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pagerduty/0834b144-ba2f-4590-a81a-28e439c1c6a7'>PagerDuty - Product Manager Intern - Winter 2020</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -390,7 +398,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1764021'>Job Application for Product Manager - Loyalty (Singapore Based) at foodpanda Philippines</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1764021'>Job Application for Product Manager - Loyalty (Singapore Based) at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -408,7 +416,7 @@
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/19472-Senior-Product-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19472-Senior-Product-Designer?source=twitter'>
       Senior Product Designer at UserVoice - Raleigh, NC - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
@@ -461,14 +469,6 @@ financial?...</p>
 <h5><a href='https://boards.greenhouse.io/endurance/jobs/1903359'>Job Application for Website Product Owner at Endurance International Group</a></h5> 
 <p><span class="badge badge-light">Burlington, MA</span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/cazoo/jobs/4496115002'>Job Application for Product Designer - Growth at  Cazoo</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211089881/Product-Manager-Buyer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Product Manager/ Buyer | CV-Library.co.uk | 211089881</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-27</p>
 <hr/>
 
 
