--- a/full-stack.html
+++ b/full-stack.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698331625-java-full-stack-developer-with-microservices'>American IT Staff JAVA Full Stack Developer with Microservices | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ohC3afwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n2VDmMwd'>ServiceNow Careers - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698331625-java-full-stack-developer-with-microservices'>American IT Staff JAVA Full Stack Developer with Microservices | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304910-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
@@ -54,7 +58,7 @@
 <p><span class="badge badge-light">Mumbai Chennai, India  Mumbai</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opRpbfwA&__jvst=Employee+Referral&__jvsd=sEPvYgwH&__jvsc=Twitter&bid=nfgfmMwn'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opRpbfwA&__jvst=Employee+Referral&__jvsd=sEPvYgwH&__jvsc=Twitter&bid=nfgfmMwn'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -82,11 +86,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
+<h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/pond5/dc8e85cb-fe5b-4bf3-9b0a-41175a21da2f'>Pond5 - Full Stack Software Engineer (WordPress)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pond5/dc8e85cb-fe5b-4bf3-9b0a-41175a21da2f'>Pond5 - Full Stack Software Engineer (WordPress)</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -177,7 +181,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://relex.recruiterbox.com/jobs/fk03ihp'>
+<h5><a href='http://relex.recruiterbox.com/jobs/fk03ihp'>
     Senior Fullstack Developer at RELEX
 </a></h5> 
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
@@ -301,7 +305,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oviva.recruitee.com/o/full-stack-software-engineer'>
+<h5><a href='https://oviva.recruitee.com/o/full-stack-software-engineer'>
       Full Stack Software Engineer - Oviva
     </a></h5> 
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
@@ -391,7 +395,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Greenwood Village Denver, Colorado</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999697788062--immediate-need-for-full-stack-java-developer-'>Infoplus Technologies "Immediate Need for Full Stack Java Developer" | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999697788062--immediate-need-for-full-stack-java-developer-'>Infoplus Technologies "Immediate Need for Full Stack Java Developer" | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -405,7 +409,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/full-stack-software-developer-aVFytQ93Kr6znWaKjNoogA'>Full Stack Software Developer #1198 job at MedSide Healthcare in Sandy Springs, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/full-stack-software-developer-aVFytQ93Kr6znWaKjNoogA'>Full Stack Software Developer #1198 job at MedSide Healthcare in Sandy Springs, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -413,7 +417,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://everphone.join.com/jobs/457872-senior-fullstack-engineer-m-f-d'>Job @ everphone (Berlin): Senior Fullstack Enginee... | JOIN</a></h5> 
+<h5><a href='https://everphone.join.com/jobs/457872-senior-fullstack-engineer-m-f-d'>Job @ everphone (Berlin): Senior Fullstack Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -439,7 +443,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/atomic/7f22cda4-549c-45b8-93f8-0265df3cf0dc'>Atomic - Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atomic/7f22cda4-549c-45b8-93f8-0265df3cf0dc'>Atomic - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -465,10 +469,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <hr/>
 <h5><a href='https://jobs.jobvite.com/doubledowninteractive/job/oXknbfwz'>DoubleDown Interactive Careers - Senior SDET - Full Stack QA</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dynatrace/ff73780a-13da-4656-9660-481e518e4562'>Dynatrace - Senior Full Stack Engineer</a></h5> 
-<p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
 
